# Rust-RAG

./: .env.example  .gitignore  Cargo.toml  README.md
.history/: .env_20260513234836  .gitignore_20260513235311  .gitignore_20260513235333
prompts/: rag_system_prompt.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: dto.rs  mod.rs  query.rs  upload.rs
src/application/: ingest_service.rs  mod.rs  prompt_builder.rs  query_service.rs
src/domain/: document.rs  embedding.rs  mod.rs  ports.rs  query.rs
src/infrastructure/: mod.rs
src/infrastructure/document_loader/: markdown_loader.rs  mod.rs  pdf_loader.rs  txt_loader.rs
src/infrastructure/embedding/: fastembed_embedder.rs  mod.rs
src/infrastructure/llm/: deepseek_client.rs  mod.rs
src/infrastructure/vector_store/: mod.rs  qdrant_store.rs
src/utils/: file.rs  mod.rs  re_rank.rs  text_splitter.rs
static/: app.js  index.html  style.css
tests/: prompt_builder_test.rs  text_splitter_test.rs
