[package]
name = "rust-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
qdrant-client = "1"
fastembed = "5"
pdf-extract = "0.10"
pulldown-cmark = "0.13"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
